changelog

=== next

+ More flexible hashtag characters.

+ Fix the memetizer to work in more environments.

+ Printing is prettier than ever before.

=== 0.9.6 Virile Vigorous and Potent

+ A bug, a fix, a bug fix, a fix bug.

+ Fix Update processing.

+ Better cookie rotation with weekly refresh.

+ A new follow button in a surprise location.

+ Fix mastodon import.

+ Filters work better with hashtags.

+ Fix hoot to work with Twitter's latest crap.

=== 0.9.5 Emergency Ejection

+ Fix honk init user creation.

=== 0.9.4 Collegiate Colloquialism

+ Add validation to some more user inputs to prevent mistakes.

+ Easier to use ping command.

=== 0.9.3 Notacanthous Nutshell

++ backup command.

+ Relax requirement for multipart/form-data posts in API.

+ Dedupe blob file data.

+ Better support for rich text bios.

+ Follow and unfollow should work a little better.

+ Option to mention all in replies.

+ Reduce interference between various text substitution rules.

+ Fix crash in search with extra space.

+ Fix pubkey issue with domain only keys.

- Custom lingo for those who don't like honking.

=== 0.9.2 Malleable Maltote

+ Fix compilation on mac.

=== 0.9.1 Late Stage Lusciousness

++ Boing boom tschak chonky chatter. Chat messages with Pleroma.

+ Custom rgb flag: emoji.

+ Slightly better ActivityPub compat

+ ## headings for markdown

+ Workaround js only twitter for hoot: feature.

+ Quote unquote reliability improvements.

+ Much better omit images handling.

+ Fix update activity.

+ A few API refinements and additions.

=== 0.9.0 Monitor vs Merrimack

--- Add Reactions.

+++ Rename react to badonk.

+ Quick fix to hide all images.

+ Allow resending follow requests.

+ Improved search query parsing.

+ Tables

+ Reduce retries talking to dumb servers.

+ Maybe possible to use @user@example.com wihtout subdomain.

=== 0.8.6 Sartorial Headpiece

++ Import command now supports the elephant in the room.

+ Minimal support for Move activity.
